UI for new concept suggestion

--- a/src/components/model/searchConceptModal.html
+++ b/src/components/model/searchConceptModal.html
@@ -6,7 +6,7 @@
 </div>
 
 <div class="modal-body search-modal" ng-show="ctrl.references.length > 0">
-  <form name="conceptForm">
+  <form id="conceptForm" name="conceptForm">
 
     <label for="reference" translate>Reference</label>
     <div class="input-group input-group-lg">
