--- a/src/app.scss
+++ b/src/app.scss
@@ -75,6 +75,11 @@
 
 .search-modal {
 
+  .empty-message a {
+    cursor: pointer;
+    padding-left: 10px;
+  }
+
   .tt-menu {
     max-height: 400px;
     overflow-y: auto;
@@ -91,6 +96,10 @@
   .input-group {
     width: 100%;
     padding-bottom: 20px;
+  }
+
+  textarea {
+    height: 100px;
   }
 
   .twitter-typeahead {
