Info text to add concept modal and use language to service call

--- a/src/components/model/addConceptModal.html
+++ b/src/components/model/addConceptModal.html
@@ -23,6 +23,7 @@
       <input id="name" type="text" class="form-control" required ng-model="ctrl.label" />
     </div>
 
+    <p><span translate>Concept is suggested to scheme</span> {{ctrl.reference.title | translateValue}}</p>
   </form>
 </div>
 
