Show concept suggestions in concept search

--- a/src/components/model/searchConceptModal.html
+++ b/src/components/model/searchConceptModal.html
@@ -24,6 +24,9 @@
       <i class="glyphicon glyphicon-search form-control-feedback"></i>
     </div>
 
+    <label for="concept" translate>Comment</label>
+    <p>{{ctrl.normalizedConcept.comment}}</p>
+
     <label for="name" translate>Label</label>
     <div class="input-group input-group-md">
       <input id="name" type="text" class="form-control" required ng-model="ctrl.label" />
