--- a/src/app.scss
+++ b/src/app.scss
@@ -75,9 +75,11 @@
 
 .search-modal {
 
-  .empty-message a {
-    cursor: pointer;
-    padding-left: 10px;
+  .empty-message {
+    padding: 3px 20px;
+    a {
+      cursor: pointer;
+    }
   }
 
   .tt-menu {
@@ -104,6 +106,11 @@
 
   .twitter-typeahead {
     width: 100%;
+
+    h5 {
+      padding-left: 10px;
+      padding-right: 10px;
+    }
   }
 
   .search-results {
