--- a/src/components/form/formSelect.html
+++ b/src/components/form/formSelect.html
@@ -1,6 +1,9 @@
-<div ng-show="inputController.content || formController.visible()">
-  <div class="model-view__title">{{inputController.title}}</div>
-  <span editable-select="inputController.content" e-ng-options="s as inputController.displayName(s) for s in inputController.values">
-    {{ inputController.displayName(inputController.content) }}
-  </span>
+<div class="editable-wrap">
+  <div ng-show="hasContent() || formController.editing" class="model-view__title">{{title | translate}}</div>
+  <select ng-show="formController.editing" class="editable-input form-control" ng-model="ngModel">
+    <option value="" translate>Not selected</option>
+    <option ng-repeat="value in values" value="{{value}}">{{displayName(value)}}</option>
+  </select>
+
+  <span ng-hide="formController.editing">{{displayName(ngModel)}}</span>
 </div>
