--- a/src/components/form/formTextArea.html
+++ b/src/components/form/formTextArea.html
@@ -1,5 +1,5 @@
-<div ng-show="inputController.hasContent() || formController.visible()">
-  <div class="model-view__title">{{inputController.title}}</div>
-  <div editable-textarea="inputController.plainText" ng-if="inputController.plainText">{{inputController.plainText}}</div>
-  <div editable-textarea="inputController.content[inputController.getLanguage()]" ng-if="!inputController.plainText">{{inputController.content | translateValue}}</div>
+<div class="editable-wrap" >
+  <div ng-show="hasContent() || formController.editing" class="model-view__title">{{title | translate}}</div>
+  <textarea ng-show="formController.editing" type="text" ng-model="ngModel" localized-input class="editable-input form-control"></textarea>
+  <span ng-hide="formController.editing">{{ngModel | translateValue}}</span>
 </div>
