--- a/src/components/model/propertyPredicateView.html
+++ b/src/components/model/propertyPredicateView.html
@@ -2,7 +2,7 @@
 <div>{{predicate | translateLabel}}</div>
 
 <div ng-show="predicate.comment">
-  <div class="model-view__title" translate>Description</div>
+  <div class="model-view__title" translate>Comment</div>
   <div>{{predicate.comment | translateValue}}</div>
 </div>
 
