--- a/src/components/model/searchClassModal.html
+++ b/src/components/model/searchClassModal.html
@@ -47,9 +47,9 @@
     </div>
 
     <div class="col-md-4" window-height padding="320">
-      <editable-form>
+      <form>
         <class-form ng-if="ctrl.selectedClass" class="ctrl.selectedClass"></class-form>
-      </editable-form>
+      </form>
     </div>
 
   </div>
