--- a/src/components/model/classForm.html
+++ b/src/components/model/classForm.html
@@ -1,8 +1,8 @@
 <h2>
-  <form-input title-edit-only="true" title="{{'Label' | translate}}" content="class.label"></form-input>
+  <form-input title-edit-only="true" title="Label" localized="true" ng-model="class.label"></form-input>
 </h2>
-<form-id title="{{'Id' | translate}}" plain-text="class.idName"></form-id>
-<form-text-area title="{{'Comment' | translate}}" content="class.comment"></form-text-area>
+<form-id title="Id" ng-model="class.idName"></form-id>
+<form-text-area title="Comment" ng-model="class.comment"></form-text-area>
 <div ng-show="class.subClassOf">
   <div class="model-view__title" translate>Superclass</div>
   <div>{{class.subClassOf}}</div>
