--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -1,26 +1,27 @@
-<editable-form on-submit="ctrl.update()" on-reset="ctrl.reset()">
+<div class="top-actions">
+  <button type="button" class="btn btn-default" ng-click="ctrl.addReference()" ng-show="ctrl.canAddReference()" translate>Add reference</button>
+  <button type="button" class="btn btn-default" ng-click="ctrl.edit()" ng-show="ctrl.canEdit()" translate>Edit</button>
+  <button type="button" class="btn btn-default" ng-click="ctrl.update()" ng-show="ctrl.isEditing()" translate>Save changes</button>
+  <button type="button" class="btn btn-default" ng-click="ctrl.cancelEditing(true)" ng-show="ctrl.isEditing()" translate>Cancel edit</button>
 
-  <div class="top-actions">
-    <button type="button" class="btn btn-default" ng-click="ctrl.addReference()" ng-if="ctrl.canAddReference()" translate>Add reference</button>
-    <button type="button" class="btn btn-default" ng-click="formController.show()" ng-show="ctrl.canEdit()" translate>Edit</button>
-    <editable-form-buttons></editable-form-buttons>
-    <show-submit-error></show-submit-error>
+  <div class="alert alert-danger" role="alert" ng-show="ctrl.submitError">
+    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+    <span translate>Save failed</span>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6">
+    <h2>
+      <form-input title-edit-only="true" title="Label" localized="true" ng-model="ctrl.modelInEdit.label"></form-input>
+    </h2>
+    <div class="model-view__title" translate>Id</div>
+    <div>{{ctrl.modelInEdit.id}}</div>
+    <form-text-area title="Comment" ng-model="ctrl.modelInEdit.comment"></form-text-area>
   </div>
 
-  <div class="row">
-    <div class="col-md-6">
-      <h2>
-        <form-input title-edit-only="true" title="{{'Label' | translate}}" content="ctrl.modelInEdit.label"></form-input>
-      </h2>
-      <div class="model-view__title" translate>Id</div>
-      <div>{{ctrl.modelInEdit.id}}</div>
-      <form-text-area title="{{'Comment' | translate}}" content="ctrl.modelInEdit.comment"></form-text-area>
-    </div>
-
-    <div class="col-md-6">
-      <references-view references="ctrl.modelInEdit.references"></references-view>
-      <requires-view requires="ctrl.modelInEdit.requires"></requires-view>
-    </div>
+  <div class="col-md-6">
+    <references-view references="ctrl.modelInEdit.references"></references-view>
+    <requires-view requires="ctrl.modelInEdit.requires"></requires-view>
   </div>
-
-</editable-form>
+</div>
