--- a/src/components/model/predicateForm.html
+++ b/src/components/model/predicateForm.html
@@ -1,9 +1,9 @@
 <h2>
-  <form-input title-edit-only="true" title="{{'Label' | translate}}" content="predicate.label"></form-input>
+  <form-input title-edit-only="true" title="Label" localized="true" ng-model="predicate.label"></form-input>
 </h2>
-<form-id title="{{'Id' | translate}}" plain-text="predicate.idName"></form-id>
-<form-text-area title="{{'Comment' | translate}}" content="predicate.comment"></form-text-area>
-<range-select ng-if="predicate.isAttribute()" content="predicate.range"></range-select>
-<form-input ng-if="predicate.isAssociation()"  title="{{'Value class' | translate}}" plain-text="predicate.range"></form-input>
+<form-id title="Id" ng-model="predicate.idName"></form-id>
+<form-text-area title="Comment" ng-model="predicate.comment"></form-text-area>
+<range-select ng-if="predicate.isAttribute()" ng-model="predicate.range"></range-select>
+<form-input ng-if="predicate.isAssociation()" title="Value class" ng-model="predicate.range"></form-input>
 <div class="model-view__title" translate>Is defined by</div>
 <div>{{predicate.modelId}}</div>
