--- a/src/components/model/searchPredicateModal.html
+++ b/src/components/model/searchPredicateModal.html
@@ -1,79 +1,81 @@
-<editable-form id="predicate-search-form" on-submit="ctrl.createAndUsePredicate()">
 
-  <div class="modal-header modal-header-confirm">
-    <h4 class="modal-title ng-binding">
-      <span translate>Search predicates</span>
-      <a type="button" title="Close" data-dismiss="modal"><i ng-click="ctrl.close()" class="glyphicon glyphicon-remove icon-arrow-right pull-right"></i></a>
-    </h4>
+<div class="modal-header modal-header-confirm">
+  <h4 class="modal-title ng-binding">
+    <span translate>Search predicates</span>
+    <a type="button" title="Close" data-dismiss="modal"><i ng-click="ctrl.close()" class="glyphicon glyphicon-remove icon-arrow-right pull-right"></i></a>
+  </h4>
+</div>
+
+<div class="modal-body search-modal">
+
+  <div class="top-actions">
+    <button type="button" class="btn btn-default btn-md" ng-click="ctrl.createNew('owl:DatatypeProperty')" ng-show="ctrl.isAttributeAddable()">
+      <span class="glyphicon glyphicon-plus"></span>
+      {{'Create new attribute' | translate}}
+    </button>
+    <button type="button" class="btn btn-default btn-md" ng-click="ctrl.createNew('owl:ObjectProperty')" ng-show="ctrl.isAssociationAddable()">
+      <span class="glyphicon glyphicon-plus"></span>
+      {{'Create new association' | translate}}
+    </button>
   </div>
 
-  <div class="modal-body search-modal">
+  <p translate>Search predicate info</p>
 
-    <div class="top-actions">
-      <button type="button" class="btn btn-default btn-md" ng-click="ctrl.createNew('owl:DatatypeProperty')" ng-show="ctrl.isAttributeAddable()">
-        <span class="glyphicon glyphicon-plus"></span>
-        {{'Create new attribute' | translate}}
-      </button>
-      <button type="button" class="btn btn-default btn-md" ng-click="ctrl.createNew('owl:ObjectProperty')" ng-show="ctrl.isAssociationAddable()">
-        <span class="glyphicon glyphicon-plus"></span>
-        {{'Create new association' | translate}}
-      </button>
+  <div class="row">
+
+    <div class="col-md-4">
+      <div class="input-group input-group-lg">
+        <input autofocus type="text" class="form-control" placeholder="{{'search predicate' | translate}}"
+               ng-model="ctrl.searchText"
+               ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }" />
+        <i class="glyphicon glyphicon-search form-control-feedback"></i>
+      </div>
+
+      <div class="input-group input-group-lg">
+        <div class="selectContainer">
+          <select class="form-control" ng-model="ctrl.modelId">
+            <option value="" translate>All models</option>
+            <option ng-repeat="model in ctrl.models" value="{{model.id}}">{{model | translateLabel}}</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="input-group input-group-lg" ng-if="ctrl.typeSelectable">
+        <div class="selectContainer">
+          <select class="form-control" ng-model="ctrl.type">
+            <option value="" translate>All types</option>
+            <option ng-repeat="type in ctrl.types" value="{{type}}">{{type | translate}}</option>
+          </select>
+        </div>
+      </div>
     </div>
 
-    <p translate>Search predicate info</p>
-
-    <div class="row">
-
-      <div class="col-md-4">
-        <div class="input-group input-group-lg">
-          <input autofocus type="text" class="form-control" placeholder="{{'search predicate' | translate}}"
-                 ng-model="ctrl.searchText"
-                 ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }" />
-          <i class="glyphicon glyphicon-search form-control-feedback"></i>
-        </div>
-
-        <div class="input-group input-group-lg">
-          <div class="selectContainer">
-            <select class="form-control" ng-model="ctrl.modelId">
-              <option value="" translate>All models</option>
-              <option ng-repeat="model in ctrl.models" value="{{model.id}}">{{model | translateLabel}}</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="input-group input-group-lg" ng-if="ctrl.typeSelectable">
-          <div class="selectContainer">
-            <select class="form-control" ng-model="ctrl.type">
-              <option value="" translate>All types</option>
-              <option ng-repeat="type in ctrl.types" value="{{type}}">{{type | translate}}</option>
-            </select>
-          </div>
+    <div class="col-md-4 search-results" window-height padding="320">
+      <div ng-repeat="predicate in ctrl.searchResults() track by predicate.id">
+        <div ng-class="['search-result', {selected: ctrl.isSelected(predicate)}]" ng-click="ctrl.selectPredicate(predicate)">
+          <i ng-class="predicate.glyphIconClass()"></i>
+          <h5>{{predicate | translateLabel}}</h5>
+          <p>{{predicate.comment | translateValue}}</p>
+          <p>{{predicate.model | translateLabel}}</p>
         </div>
       </div>
+    </div>
 
-      <div class="col-md-4 search-results" window-height padding="320">
-        <div ng-repeat="predicate in ctrl.searchResults() track by predicate.id">
-          <div ng-class="['search-result', {selected: ctrl.isSelected(predicate)}]" ng-click="ctrl.selectPredicate(predicate)">
-            <i ng-class="predicate.glyphIconClass()"></i>
-            <h5>{{predicate | translateLabel}}</h5>
-            <p>{{predicate.comment | translateValue}}</p>
-            <p>{{predicate.model | translateLabel}}</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
+    <div class="col-md-4">
+      <form id="predicate-search-form">
         <predicate-form ng-if="ctrl.selectedPredicate" predicate="ctrl.selectedPredicate"></predicate-form>
-        <show-submit-error></show-submit-error>
-      </div>
-
+        <div class="alert alert-danger" role="alert" ng-show="ctrl.submitError">
+          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+          <span translate>Save failed</span>
+        </div>
+      </form>
     </div>
-  </div>
 
-  <div class="modal-footer">
-    <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.close()" translate>Cancel</button>
-    <button type="button" class="btn btn-default btn-lg" ng-show="!editableFormController.visible()" ng-click="ctrl.usePredicate()" ng-disabled="!ctrl.selectedPredicate" translate>Use predicate</button>
-    <button type="submit" class="btn btn-default btn-lg" ng-show="editableFormController.visible()" translate>Create and use predicate</button>
   </div>
+</div>
 
-</editable-form>
+<div class="modal-footer">
+  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.close()" translate>Cancel</button>
+  <button type="button" class="btn btn-default btn-lg" ng-show="!ctrl.isEditing()" ng-click="ctrl.usePredicate()" ng-disabled="!ctrl.selectedPredicate" translate>Use predicate</button>
+  <button type="button" class="btn btn-default btn-lg" ng-show="ctrl.isEditing()" ng-click="ctrl.createAndUsePredicate()" translate>Create and use predicate</button>
+</div>
