--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -13,11 +13,11 @@
 <div class="row">
   <div class="col-md-6">
     <h2>
-      <form-input title-edit-only="true" title="Label" localized="true" ng-model="ctrl.modelInEdit.label"></form-input>
+      <editable title-edit-only="true" title="Label"><input class="form-control" type="text" localized-input ng-model="ctrl.modelInEdit.label" /></editable>
     </h2>
     <div class="model-view__title" translate>Id</div>
     <div>{{ctrl.modelInEdit.id}}</div>
-    <form-text-area title="Comment" ng-model="ctrl.modelInEdit.comment"></form-text-area>
+    <editable title="Comment"><textarea class="form-control" localized-input ng-model="ctrl.modelInEdit.comment"></textarea></editable>
   </div>
 
   <div class="col-md-6">
