--- a/src/components/model/predicateForm.html
+++ b/src/components/model/predicateForm.html
@@ -1,9 +1,9 @@
 <h2>
-  <form-input title-edit-only="true" title="Label" localized="true" ng-model="predicate.label"></form-input>
+  <editable title-edit-only="true" title="Label"><input class="form-control" type="text" localized-input ng-model="predicate.label" /></editable>
 </h2>
-<form-id title="Id" ng-model="predicate.idName"></form-id>
-<form-text-area title="Comment" ng-model="predicate.comment"></form-text-area>
-<range-select ng-if="predicate.isAttribute()" ng-model="predicate.range"></range-select>
-<form-input ng-if="predicate.isAssociation()" title="Value class" ng-model="predicate.range"></form-input>
+<editable title="Id"><input type="text" id-input ng-model="predicate.idName" /></editable>
+<editable title="Comment"><textarea class="form-control" localized-input ng-model="predicate.comment"></textarea></editable>
+<editable title="Range" ng-if="predicate.isAttribute()"><range-select range="predicate.range"></range-select></editable>
+<editable title="Value class" ng-if="predicate.isAssociation()"><input class="form-control" type="text" ng-model="predicate.range /"></editable>
 <div class="model-view__title" translate>Is defined by</div>
 <div>{{predicate.modelId}}</div>
