--- a/src/components/model/propertyView.html
+++ b/src/components/model/propertyView.html
@@ -4,11 +4,11 @@
     <button ng-show="selectionViewController.canRemoveProperty()" type="button" class="btn btn-default" ng-click="selectionViewController.removeProperty(property)" translate>Delete property</button>
   </div>
 
-  <form-input title="Name" localized="true" ng-model="property.label"></form-input>
-  <form-text-area title="Comment" ng-model="property.comment"></form-text-area>
-  <form-input title="Example" localized="true" ng-model="property.example"></form-input>
-  <range-select ng-model="property.datatype" ng-if="predicate.isAttribute()"></range-select>
-  <form-input title="Value class" ng-model="property.valuesClass" ng-if="predicate.isAssociation()"></form-input>
+  <editable title="Name"><input class="form-control" type="text" localized-input ng-model="property.label" /></editable>
+  <editable title="Comment"><textarea class="form-control" localized-input ng-model="property.comment"></textarea></editable>
+  <editable title="Example"><input class="form-control" type="text" localized-input ng-model="property.example" /></editable>
+  <editable title="Range" ng-if="predicate.isAttribute()"><range-select range="property.datatype"></range-select></editable>
+  <editable title="Value class" ng-if="predicate.isAssociation()"><input class="form-control" type="text" ng-model="property.valuesClass" /></editable>
   <uib-accordion>
     <uib-accordion-group is-open="isOpen[property.predicateId]">
       <uib-accordion-heading>{{property.predicateIdName}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property.predicateId], 'glyphicon-chevron-right': !isOpen[property.predicateId]}"></span></uib-accordion-heading>
