Remove unnecessary title

--- a/src/components/model/classForm.html
+++ b/src/components/model/classForm.html
@@ -2,7 +2,7 @@
   <editable title-edit-only="true" title="Label"><input class="form-control" type="text" localized-input ng-model="class.label"/></editable>
 </h2>
 <editable title="Id"><input class="form-control" type="text" id-input ng-model="class.idName" /></editable>
-<editable title="Comment"><textarea class="form-control" localized-input title="Comment" ng-model="class.comment"></textarea></editable>
+<editable title="Comment"><textarea class="form-control" localized-input ng-model="class.comment"></textarea></editable>
 <div ng-show="class.subClassOf">
   <div class="model-view__title" translate>Superclass</div>
   <div>{{class.subClassOf}}</div>
