--- a/src/components/model/selectionView.html
+++ b/src/components/model/selectionView.html
@@ -1,13 +1,13 @@
 <form>
   <div ng-if="ctrl.selection">
-    <div class="top-actions" float="top-actions-placeholder" top-offset="8">
-      <button type="button" class="btn btn-default" ng-click="ctrl.addProperty()" ng-show="ctrl.canAddProperty()" translate>Add property</button>
-      <button type="button" class="btn btn-default" ng-click="ctrl.remove()" ng-show="ctrl.canRemove()">
+    <div class="top-actions" float="top-actions-placeholder" preserve-parent-width="true" top-offset="8">
+      <button type="button" class="btn btn-default right" ng-click="ctrl.cancelEditing(true)" ng-show="ctrl.isEditing()" translate>Cancel edit</button>
+      <button type="button" class="btn btn-default right" ng-click="ctrl.update()" ng-show="ctrl.isEditing()" translate>Save changes</button>
+      <button type="button" class="btn btn-default right" ng-click="ctrl.edit()" ng-show="ctrl.canEdit()" translate>Edit</button>
+      <button type="button" class="btn btn-default right" ng-click="ctrl.remove()" ng-show="ctrl.canRemove()">
         {{ctrl.selection.isClass() ? 'Delete class' : 'Delete predicate' | translate}}
       </button>
-      <button type="button" class="btn btn-default" ng-click="ctrl.edit()" ng-show="ctrl.canEdit()" translate>Edit</button>
-      <button type="button" class="btn btn-default" ng-click="ctrl.update()" ng-show="ctrl.isEditing()" translate>Save changes</button>
-      <button type="button" class="btn btn-default" ng-click="ctrl.cancelEditing(true)" ng-show="ctrl.isEditing()" translate>Cancel edit</button>
+      <button type="button" class="btn btn-default right" ng-click="ctrl.addProperty()" ng-show="ctrl.canAddProperty()" translate>Add property</button>
 
       <div class="alert alert-danger" role="alert" ng-show="ctrl.submitError">
         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
