--- a/src/components/navigation/modelLanguageChooser.html
+++ b/src/components/navigation/modelLanguageChooser.html
@@ -1,5 +1,6 @@
-<div class="btn-group" uib-dropdown is-open="status.isopen">
-  <button id="single-button" type="button" class="btn btn-default navbar-button" uib-dropdown-toggle ng-disabled="disabled">
+<p class="left button-label text"><span translate>Data language</span>:</p>
+<div class="btn-group left" uib-dropdown is-open="status.isopen">
+  <button id="single-button" type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
     {{currentLanguage()}} <span class="caret"></span>
   </button>
   <ul class="dropdown-menu" role="menu">
