--- a/src/components/navigation/login.html
+++ b/src/components/navigation/login.html
@@ -1,7 +1,13 @@
 <button type="button" class="btn btn-default navbar-button"
-        ng-show="!ctrl.isLoggedIn()"
+        ng-show="!ctrl.getUser().isLoggedIn()"
         ng-click="ctrl.openLogin()" translate="">Login</button>
 
-<button type="button" class="btn btn-default navbar-button"
-        ng-show="ctrl.isLoggedIn()"
-        ng-click="ctrl.logout()" translate="">Logout</button>
+
+<div ng-show="ctrl.getUser().isLoggedIn()" class="btn-group" uib-dropdown is-open="status.isopen">
+  <button id="single-button" type="button" class="btn btn-default navbar-button" uib-dropdown-toggle ng-disabled="disabled">
+    {{ctrl.getUser().name}} <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li role="menuitem"><a ng-click="ctrl.logout()" translate>Logout</a></li>
+  </ul>
+</div>
