Added group homepage metadata to examples and frame

--- a/src/components/group/group.html
+++ b/src/components/group/group.html
@@ -1,11 +1,9 @@
 <div class="top" ng-hide="ctrl.loading">
   <div class="top-actions">
-    <a class="btn btn-default right" ng-show="ctrl.canAskForRights()" href="{{ctrl.group.id+'_MEMBERS'}}" target="_blank" translate>Ask for group rights</a>
+    <a class="btn btn-default right" ng-show="ctrl.canAskForRights()" href="{{ctrl.group.homepage}}" target="_blank" translate>Ask for group rights</a>
     <button type="button" class="btn btn-default right" ng-click="ctrl.addModel()" ng-if="ctrl.canAddModel()" translate>Add model</button>
   </div>
-
   <h2>{{ctrl.group | translateLabel}}</h2>
-
   <ul>
     <li ng-repeat="model in ctrl.models">
       <a href="#/models/?urn={{model.id | urlencode}}">{{model | translateLabel}}</a>
