--- a/src/components/model/propertyView.html
+++ b/src/components/model/propertyView.html
@@ -11,7 +11,7 @@
   <editable title="Value class" ng-if="predicate.isAssociation()"><class-select class-name="property.valuesClass"></class-select></editable>
   <uib-accordion>
     <uib-accordion-group is-open="isOpen[property.predicateId]">
-      <uib-accordion-heading>{{property.predicateIdName}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property.predicateId], 'glyphicon-chevron-right': !isOpen[property.predicateId]}"></span></uib-accordion-heading>
+      <uib-accordion-heading>{{property.predicateCurie}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property.predicateId], 'glyphicon-chevron-right': !isOpen[property.predicateId]}"></span></uib-accordion-heading>
       <property-predicate-view predicate="predicate" ng-if="isOpen[property.predicateId]"></property-predicate-view>
     </uib-accordion-group>
   </uib-accordion>
