--- a/src/components/model/searchConceptModal.html
+++ b/src/components/model/searchConceptModal.html
@@ -27,9 +27,11 @@
     <label for="concept" translate>Comment</label>
     <p>{{ctrl.normalizedConcept.comment}}</p>
 
-    <label for="name" translate>Label</label>
-    <div class="input-group input-group-md">
-      <input id="name" type="text" class="form-control" required ng-model="ctrl.label" />
+    <div ng-if="ctrl.newCreation">
+      <label for="name" translate>Label</label>
+      <div class="input-group input-group-md">
+        <input id="name" type="text" class="form-control" required ng-model="ctrl.label" />
+      </div>
     </div>
 
   </form>
@@ -41,5 +43,5 @@
 
 <div class="modal-footer">
   <button class="btn btn-default" type="button" ng-click="ctrl.cancel()" translate>Cancel</button>
-  <button class="btn btn-default" type="button" ng-click="ctrl.create()" ng-show="ctrl.references.length > 0" ng-disabled="!conceptForm.$valid" translate>Create new</button>
+  <button class="btn btn-default" type="button" ng-click="ctrl.create()" ng-show="ctrl.references.length > 0" ng-disabled="!conceptForm.$valid">{{ctrl.buttonTitle | translate}}</button>
 </div>
