--- a/src/components/model/selectionView.html
+++ b/src/components/model/selectionView.html
@@ -16,7 +16,7 @@
       </div>
     </div>
 
-    <class-form ng-if="ctrl.selection.isClass()" class="ctrl.selectionInEdit"></class-form>
-    <predicate-form ng-if="ctrl.selection.isPredicate()" predicate="ctrl.selectionInEdit"></predicate-form>
+    <class-form ng-if="ctrl.selection.isClass()" class="ctrl.selectionInEdit" references="modelController.getModel().references"></class-form>
+    <predicate-form ng-if="ctrl.selection.isPredicate()" predicate="ctrl.selectionInEdit" references="modelController.getModel().references"></predicate-form>
   </div>
 </form>
