State showing and selection

--- a/src/components/model/classForm.html
+++ b/src/components/model/classForm.html
@@ -9,6 +9,7 @@
 </div>
 <div class="model-view__title" translate>Is defined by</div>
 <div>{{class.modelId}}</div>
+<editable title="State" value-as-localization-key="true"><state-select state="class.state"></state-select></editable>
 <editable-subject-select references="references" type="class" subject="class.subject"></editable-subject-select>
 
 <uib-accordion close-others="true">
