--- a/src/components/model/predicateForm.html
+++ b/src/components/model/predicateForm.html
@@ -7,4 +7,5 @@
 <editable title="Value class" ng-if="predicate.isAssociation()"><class-select class-name="predicate.range"></class-select></editable>
 <div class="model-view__title" translate>Is defined by</div>
 <div>{{predicate.modelId}}</div>
+<editable title="State" value-as-localization-key="true"><state-select state="predicate.state"></state-select></editable>
 <editable-subject-select references="references" type="predicate" subject="predicate.subject"></editable-subject-select>
