--- a/src/components/model/model.html
+++ b/src/components/model/model.html
@@ -1,9 +1,26 @@
-<div ng-hide="ctrl.loading">
+<div>
 
   <div class="top">
-    <form>
-      <model-view></model-view>
-    </form>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a href="" tabindex="0" class="accordion-toggle" ng-click="ctrl.isModelCollapsed = !ctrl.isModelCollapsed">
+            <span class="ng-binding ng-scope">{{ctrl.getModel() | translateLabel}}</span>
+            <span class="glyphicon pull-right ng-scope"></span>
+          </a>
+        </h4>
+      </div>
+    </div>
+
+    <div uib-collapse="ctrl.isModelCollapsed">
+      <div class="panel-collapse in collapse" aria-expanded="true" aria-hidden="false" style="height: auto">
+        <div class="panel-body">
+          <form>
+            <model-view></model-view>
+          </form>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div class="bottom" ng-if="ctrl.isModelSaved()">
